# pokemonAIrena

./: .gitignore  CLAUDE.md  HANDOFF.md  PROGRESS.md  README.md  app.py  config.yaml  pyproject.toml  requirements.txt  state.md
agent/: player.py  providers.py
battle/: act.py  damage.py  observe.py  state.py
guardrails/: rules.py
harness/: loop.py
kb/: __init__.py  base_stats.json  moves.json  type_chart.json
scripts/: ocr_probe.py  probe_retroarch.py  ram_search.py
tests/: test_battle.py  test_capture.py  test_damage.py  test_guardrails.py  test_kb.py  test_keyboard.py  test_llm_player.py  test_ocr.py  test_ocr_tesseract.py  test_retroarch_transport.py  test_vision_backend.py  test_vision_moves.py  test_vision_observe.py
vision/: capture.py  layout.py  observe.py  ocr.py
world/: base.py  keyboard.py  mock.py  project64.py  retroarch.py  vision.py
