[project]
name = "pokemon-battle-harness"
version = "0.1.0"
description = "An LLM agent plays Pokémon Stadium (Gen 1) battles on an N64 emulator (mock, Project64, or RetroArch)"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# LLM-backed player. Without this, the deterministic heuristic player is used.
agent = ["anthropic>=0.34"]
# OCR + keyboard input path (macOS): on-device Vision OCR, Quartz key events.
vision = ["pillow>=10", "pyobjc-framework-Vision>=10", "pyobjc-framework-Quartz>=10"]
dev = ["pytest>=8.2", "ruff>=0.5"]

[project.scripts]
pokemon-battle-harness = "app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["kb*", "world*", "battle*", "guardrails*", "agent*", "harness*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
